
[package]
description = "datafetcher_transform for swc"

name         = "datafetcher_transform"
version      = "0.1.0"

edition = "2021"
rust-version = "1.70"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]



[dependencies]
datafetcher_transform = { path = "./transform" }
serde             = { version = "1.0.201", features = ["derive"] }
serde_json        = "1.0.117"
swc_atoms         = "0.6.7"
swc_common        = { version = "0.33.26", features = ["concurrent"] }
swc_core          = { version = "0.92.2", features = ["ecma_plugin_transform"] }
swc_ecma_ast      = "0.113.2"
swc_ecma_utils    = "0.128.1"
swc_ecma_visit    = "0.99.1"
swc_plugin_macro  = "0.9.16"
tracing           = { version = "0.1.40", features = ["release_max_level_off"] }
